--- a/src/settings.json
+++ b/src/settings.json
@@ -5,7 +5,7 @@
     "APIKey": null,
     "Wallet": {
       "BTC": 0,
-      "ETH": ,
+      "ETH": 0,
       "LTC": 0,
       "ZEC": 0,
       "BCH": 0,
